--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <section id="banner" class="section-m1">
         <h4>Repair Services</h4>
         <h2>Upto <span>70% Off</span>- All T-shirts & Accessories</h2>
-        <button class="normal">Explore More</button>
+        <a href="./shop.html"><button class="normal">Explore More</button></a>
     </section>
 
     <section id="product1" class="section-p1">
