--- a/shop.html
+++ b/shop.html
@@ -59,7 +59,7 @@
                 </div>
                 <a href="#" ><i class="fa-sharp fa-solid fa-cart-shopping"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html'">
                 <img src="img/products/f2.jpg" alt="">
                 <div class="des">
                     <span>Adiddas</span>
